module(name = "nanobind_example", version = "0.1.0")

bazel_dep(name = "nanobind_bazel", version = "2.2.0")
bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.8")
python.toolchain(python_version = "3.9")
python.toolchain(python_version = "3.10")
python.toolchain(python_version = "3.11")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
python.toolchain(python_version = "3.13")

use_repo(python, python = "python_versions")
