[build-system]
requires = ["scikit-build-core", "nanobind>=1.3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nanobind-example"
version = "0.0.1"
description = "An example minimal project that compiles bindings using nanobind and scikit-build"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Wenzel Jakob", email = "wenzel.jakob@epfl.ch" },
]
classifiers = [
    "License :: BSD",
]

[project.urls]
Homepage = "https://github.com/wjakob/nanobind_example"

[[tool.cibuildwheel.overrides]]
select = "cp312-*"
config-settings = {"wheel.py-api" = "cp312"}
